--- a/public/stat220/Day27.html
+++ b/public/stat220/Day27.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Case Study: Random Forest</title>
+    <title>Model Accuracy and Evaluation</title>
     <meta charset="utf-8" />
     <meta name="author" content="Bastola" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -42,201 +42,336 @@ layout: true
 
 class: title-slide, middle
 
-# .fancy[Unlocking the Power of Machine Learning]
-## .fancy[Address Formatting Correctness Prediction]
-### .fancy[Spring 2023]
 
- May 29 2023
+# .fancy[Decision Trees and Random Forest]
 
----
+### .fancy[Stat 220]
 
 
-class: inverse, middle
-
-
-
-.bql[# Example - Detecting Typos in Addresses
-Consider the task of detecting typos in street addresses. A machine learning model could be trained to classify addresses as correct or incorrect based on various features, one of which could be the .b[Levenshtein distance] from a known correct address.
-]
-
+ March 03 2024
 
 ---
 
 class: middle
 
-# Examples of Addresses
-
-.pull-left[
-.bq.font80[
-## Correct Addresses
-1. 530 5th St E, Northfield, MN, 55057
-2. 123 Main St, Los Angeles, CA, 90034
-3. 789 Broadway, Apt 12B, New York, NY, 10025
-4. 456 Pine Ave, San Francisco, CA, 94108
-5. 159 River Rd, Boston, MA, 02115
-]
-]
-.pull-right[
-.bq.font80[## Incorrect Addresses
-1. 530 5th Street East, North, MN, 55057
-2. 123 Mian Street, Los Angeles, CA, 9003
-3. 78 Broadway, Apt 12B, New York, NY, 10025
-4. 456Pine Avenue, San Francisco, CA, 94108
-5. 159 River Rd, Bosotn, MA, 02115
-]
-]
-
-
----
-
-class: middle
-
-# The Problem
-## Incorrect and inconsistently formatted addresses
-
-.pull-left[
-.bql.font80[
-- Inconsistently formatted addresses pose a significant problem in data management and analysis.
-- They can lead to inaccurate data matching, ineffective communication, and inefficiencies in logistics and delivery services.
-- Incorrect addresses can also pose security issues and lead to lost business opportunities.
-]
-]
-.pull-right[
-.bql.font80[
-- Address standardization and validation is crucial in various domains such as e-commerce, logistics, healthcare, and public services.
-- Data scientists often need to assess the validity of addresses, correct them where possible, or flag potential issues for further investigation.
-]
-]
-
-
-.hljs[Our aim is to develop a machine learning model that can predict if a given address is correctly formatted based on various features.]
-
----
-
-class: middle
-
-# One Potential Solution: Random Forest for Address Formatting
-
-.pull-left[
-## Why Random Forest?
-.bq.font80[
-- .highlight[Ability to handle complex patterns]: Addresses can have diverse and complex patterns
-- .highlight[Robust to overfitting]: The ensemble nature of Random Forest makes it less likely to overfit compared to simpler models
-- .highlight[Feature importance]: Random Forest provides a straightforward way to measure the importance of each feature
-]
-]
-
-
-.pull-right[
-## Training Random Forest
-.bq.font80[
-- The Random Forest model is trained using our dataset, which contains both correctly and incorrectly formatted addresses.
-- Each address is represented by a set of features such as its length, number of words, presence of apartment number, zip code correctness, etc.
-- Our model learns to predict the correctness of an address based on these features.
-]
-]
-
----
-
-class: middle
-
-# Feature and Feature Engineering
-
-.pull-left[
+## Decision Tree
 
 .bql[
-"Length"               
-"Number of Words"      
-"State Code"          
-"Zip Code"           
-"Levenshtein Distance"  
-"Presence of apt no"    
-"Presence of street no"   
+- learns how to best split the dataset into smaller and smaller subsets to predict the target value
 ]
 
-]
+.pull-left[
+.bq.font80[
+- Data is continuously split according to a certain parameter
 
+- Two main entities:
+
+  + .out-t[nodes]: where the data is split
+  + .out-t[leaves]: decisions or final outcomes
+]
+]
 .pull-right[
-.bql[
-
-"Presence of street name" 
-"Presence of city"      
-"Presence of state"     
-"Presence of zip code"   
-"State code correctness" 
-"Zip code correctness"
-"Typo in street name" 
+&lt;br&gt;
+&lt;img src="images/taylor-tree.png" width="100%" /&gt;
 
 ]
-
-
-]
-
-
-
 
 ---
 
 class: middle
 
-#  Levenshtein distance
+# Decision Tree
 
-.hljs[Levenshtein distance is a tool used for quantifying the difference between two sequences by calculating the minimum number of single-character edits needed to transform one string into the other.]
+.yellow-h[Use features to make subsets of cases that are as similar (“pure”) as possible with respect to the outcome]
 
-.bqt.font80[
+.bq.font80[
+- Start with all observations in one group
 
-- This measure utilizes three types of edits: insertions, deletions, and substitutions.
+- Find the variable/feature/split that best separates the outcome
 
-- Due to its ability to assess string similarity and difference, Levenshtein distance finds extensive use in applications where such determinations are necessary.
+- Divide the data into two groups (leaves) on the split (node)
+
+- Within each split, find the best variable/split that separates the outcomes
+
+- Continue until the groups are too small or sufficiently “pure”
 ]
 
 
-.footnote[Levenshtein, Vladimir I. "Binary codes capable of correcting deletions, insertions, and reversals." In Soviet physics doklady, vol. 10, no. 8, pp. 707-710. 1966.]
+---
+
+# Dataset
+
+.code120[
+
+```r
+data(PimaIndiansDiabetes2)
+db &lt;- PimaIndiansDiabetes2 %&gt;% drop_na() %&gt;%
+  mutate(diabetes = fct_relevel(diabetes, c("neg", "pos")))
+```
+]
+
+--
+
+
+```r
+glimpse(db)
+Rows: 392
+Columns: 9
+$ pregnant &lt;dbl&gt; 1, 0, 3, 2, 1, 5, 0, 1, 1, 3, 11, 10, 1, 13, 3, 3, 4, 4, 3, 9…
+$ glucose  &lt;dbl&gt; 89, 137, 78, 197, 189, 166, 118, 103, 115, 126, 143, 125, 97,…
+$ pressure &lt;dbl&gt; 66, 40, 50, 70, 60, 72, 84, 30, 70, 88, 94, 70, 66, 82, 76, 5…
+$ triceps  &lt;dbl&gt; 23, 35, 32, 45, 23, 19, 47, 38, 30, 41, 33, 26, 15, 19, 36, 1…
+$ insulin  &lt;dbl&gt; 94, 168, 88, 543, 846, 175, 230, 83, 96, 235, 146, 115, 140, …
+$ mass     &lt;dbl&gt; 28.1, 43.1, 31.0, 30.5, 30.1, 25.8, 45.8, 43.3, 34.6, 39.3, 3…
+$ pedigree &lt;dbl&gt; 0.167, 2.288, 0.248, 0.158, 0.398, 0.587, 0.551, 0.183, 0.529…
+$ age      &lt;dbl&gt; 21, 33, 26, 53, 59, 51, 31, 33, 32, 27, 51, 41, 22, 57, 28, 2…
+$ diabetes &lt;fct&gt; neg, pos, pos, pos, pos, pos, pos, neg, pos, neg, pos, pos, n…
+```
+
+---
+
+
+class: middle
+
+# Data preparation and pre-processing
+
+.code120[
+
+```r
+set.seed(314) 
+db_split &lt;- initial_split(db, prop = 0.75)
+db_train &lt;- db_split %&gt;% training()
+db_test &lt;- db_split %&gt;% testing()
+```
+]
+
+.code120[
+
+```r
+# scaling not needed
+db_recipe &lt;- recipe(diabetes ~ ., data = db_train) %&gt;%
+ step_dummy(all_nominal(), -all_outcomes()) %&gt;%
+ prep()
+```
+]
 
 ---
 
 class: middle
 
-# Calculation of Levenshtein Distance
+# Model Specification
 
-.hljs[Let's consider two strings: kitten and sitting. To transform "kitten" into "sitting" we could:]
-
-.bql.font90[
-- Substitute "k" with "s" - sitting
-- Substitute "e" with "i" - sittin
-- Append "g" - sitting
+.bq[
+- .out-t.bold[cost_complexity:] The cost complexity parameter, the minimum improvement in the model needed at each node
+- .out-t.bold[tree_depth:] The maximum depth of a tree
+- .out-t.bold[min_n:] The minimum number of data points in a node that are required for the node to be split further.
 ]
 
-.blue-h[The Levenshtein distance between "kitten" and "sitting" is therefore 3.]
+
+```r
+tree_model &lt;- decision_tree(cost_complexity = tune(),
+                            tree_depth = tune(),
+                            min_n = tune()) %&gt;% 
+              set_engine('rpart') %&gt;% 
+              set_mode('classification')
+```
 
 ---
 
+class: middle
+
+# Workflow
+
+.code120[
+
+```r
+# Combine the model and recipe into a workflow 
+tree_workflow &lt;- workflow() %&gt;% 
+                 add_model(tree_model) %&gt;% 
+                 add_recipe(db_recipe)
+```
+]
+
+---
 
 class: middle
 
-# R code for calculating Levenshtein Distance for Address Validation
+# Hyperparameter tuning
+
+.code120[
+
+```r
+# Create folds for cross validation on the training data set
+db_folds &lt;- vfold_cv(db_train, v = 5, strata = diabetes)
+```
+]
+
+.code120[
+
+```r
+## Create a grid of hyperparameter values to test
+tree_grid &lt;- grid_random(cost_complexity(),
+                          tree_depth(),
+                          min_n(), 
+                          size = 10)
+```
+]
+
+---
+
+class: middle
+
+# View grid
+
+.font130[
+
+```r
+tree_grid
+# A tibble: 10 × 3
+   cost_complexity tree_depth min_n
+             &lt;dbl&gt;      &lt;int&gt; &lt;int&gt;
+ 1        5.28e-10          7    40
+ 2        2.99e- 6          3     7
+ 3        1.30e- 8          1    17
+ 4        1.94e- 2         13    19
+ 5        1.74e- 7         11    22
+ 6        8.11e- 7          6     3
+ 7        2.41e- 6          4    10
+ 8        1.01e- 5         14    40
+ 9        2.38e- 2          4    18
+10        2.68e- 6         15    39
+```
+]
+
+---
+
+class: middle
+
+# Tuning Hyperparameters with `tune_grid()`
+
+.code120[
+
+```r
+# Tune decision tree workflow
+set.seed(314)
+tree_tuning &lt;- tree_workflow %&gt;% 
+               tune_grid(resamples = db_folds,
+                         grid = tree_grid)
+```
+]
+
+---
+
+class: middle
+
+# Best model
+
+
+```r
+# Select best model based on accuracy
+best_tree &lt;- tree_tuning %&gt;% 
+             select_best(metric = 'accuracy')
+```
+
 
 
 
 ```r
-# Calculate the Levenshtein distance between the provided and correct address
-levenshtein_distance &lt;- stringdist::stringdist(address, correct_address)
+# View the best tree parameters
+best_tree
+# A tibble: 1 × 4
+  cost_complexity tree_depth min_n .config              
+            &lt;dbl&gt;      &lt;int&gt; &lt;int&gt; &lt;chr&gt;                
+1        5.28e-10          7    40 Preprocessor1_Model01
 ```
 
+---
+
+&lt;br&gt;
+
+# Finalize workflow
+
+
+```r
+final_tree_workflow &lt;- tree_workflow %&gt;% 
+                       finalize_workflow(best_tree)
+```
+
+--
+
+# Fit the model
+
+
+```r
+tree_wf_fit &lt;- final_tree_workflow %&gt;% 
+               fit(data = db_train)
+```
+
+--
+
+# Extract fit 
+
+
+```r
+tree_fit &lt;- tree_wf_fit %&gt;% 
+            extract_fit_parsnip()
+```
+
+---
+
+.code80[
+
+```r
+vip(tree_fit)
+```
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="Day27_files/figure-html/unnamed-chunk-17-1.svg" alt="Variable Importance" width="55%" /&gt;
+&lt;p class="caption"&gt;Variable Importance&lt;/p&gt;
+&lt;/div&gt;
+]
+
+---
+.code80[
+
+```r
+rpart.plot(tree_fit$fit, roundint = FALSE)
+```
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="Day27_files/figure-html/unnamed-chunk-18-1.svg" alt="Decision Tree" width="55%" /&gt;
+&lt;p class="caption"&gt;Decision Tree&lt;/p&gt;
+&lt;/div&gt;
+]
 
 ---
 
 class: middle
 
-# Other examples
+# Train and Evaluate With `last_fit()`
 
-In addition to address validation, the Levenshtein distance can be used in a wide range of other applications. 
 
-.bq.font90[
-- DNA sequence alignment in bioinformatics
-- Spell checking and correction
-- Duplicate detection in data cleaning.
-]
+```r
+tree_last_fit &lt;- final_tree_workflow %&gt;% 
+                 last_fit(db_split)
+```
+
+
+
+```r
+tree_last_fit %&gt;% collect_metrics()
+# A tibble: 2 × 4
+  .metric  .estimator .estimate .config             
+  &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt; &lt;chr&gt;               
+1 accuracy binary         0.765 Preprocessor1_Model1
+2 roc_auc  binary         0.824 Preprocessor1_Model1
+```
+
+---
+
+# Confusion matrix
+
+&lt;img src="Day27_files/figure-html/unnamed-chunk-21-1.svg" width="600" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -250,14 +385,224 @@ class: action, middle
 ]
 .pull-right-60[
 &lt;br&gt;
+&lt;br&gt;
 .bq[
-- Get the class activity 27.Rmd file from  [moodle](https://moodle.carleton.edu/course/view.php?id=39491) 
+- Get the class activity 26.Rmd file from  [moodle](https://moodle.carleton.edu/course/view.php?id=43045) 
 - Let's work on group activity 1 together
 ]
 
+
+
 ]
 
-<div class="countdown" id="timer_72edb5ca" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_a43e0797" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
+<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+---
+
+class: inverse, middle
+
+
+&gt; Now, let's talk about random forest
+
+
+---
+
+class: middle
+
+# Random Forest
+
+.out-t[Random forests take decision trees and construct more powerful models in terms of prediction accuracy.]
+
+
+
+.font80.bq[
+- &lt;!--The main mechanism that powers this algorithm is--&gt; Repeated sampling (with replacement) of the training data to produce a sequence of decision tree models. 
+
+- These models are then averaged to obtain a single prediction for a given value in the predictor space.
+
+- The random forest model selects a random subset of predictor variables for splitting the predictor space in the tree building process. &lt;!--This is done for every iteration of the algorithm, typically 100 to 2,000 times.--&gt;
+]
+
+---
+
+class: middle
+
+# Model Specification
+
+.bq[
+- .out-t.bold[mtry:] The number of predictors that will be randomly sampled at each split when creating the tree models
+
+- .out-t.bold[trees:] The number of decision trees to fit and ultimately average
+
+- .out-t.bold[min_n:] The minimum number of data points in a node that are required for the node to be split further
+]
+
+---
+&lt;br&gt;
+&lt;br&gt;
+
+# Model Specification
+
+
+```r
+rf_model &lt;- rand_forest(mtry = tune(),
+                        trees = tune(),
+                        min_n = tune()) %&gt;% 
+            set_engine('ranger', importance = "impurity") %&gt;% 
+            set_mode('classification')
+```
+
+--
+
+# Workflow
+
+
+```r
+rf_workflow &lt;- workflow() %&gt;% 
+               add_model(rf_model) %&gt;% 
+               add_recipe(db_recipe)
+```
+
+---
+
+class: middle
+
+# Hyperparameter Tuning
+
+
+```r
+## Create a grid of hyperparameter values to test
+set.seed(314)
+rf_grid &lt;- grid_random(mtry() %&gt;% range_set(c(2, 7)),
+                       trees(),
+                       min_n(),
+                       size = 15)
+```
+
+---
+
+# View Grid
+
+
+```r
+rf_grid
+# A tibble: 15 × 3
+    mtry trees min_n
+   &lt;int&gt; &lt;int&gt; &lt;int&gt;
+ 1     7   609    32
+ 2     5  1235     6
+ 3     4  1822    29
+ 4     5   678    16
+ 5     4   138    14
+ 6     3  1218    19
+ 7     7   228    14
+ 8     5   873     4
+ 9     6  1387    10
+10     7  1717     5
+11     5   436     4
+12     3  1175    16
+13     6  1909    33
+14     6   118     4
+15     2  1003    24
+```
+
+---
+
+class: middle
+
+# Tuning Hyperparameters with `tune_grid()`
+
+
+
+```r
+## Tune random forest workflow
+set.seed(314)
+
+rf_tuning &lt;- rf_workflow %&gt;% 
+             tune_grid(resamples = db_folds,
+                       grid = rf_grid)
+```
+
+---
+
+class: middle
+
+# Select best
+
+
+```r
+## Select best model based on roc_auc
+best_rf &lt;- rf_tuning %&gt;% 
+           select_best(metric = 'accuracy')
+```
+
+
+```r
+# View the best parameters
+best_rf
+# A tibble: 1 × 4
+   mtry trees min_n .config              
+  &lt;int&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;                
+1     2  1003    24 Preprocessor1_Model15
+```
+
+---
+
+&lt;br&gt;
+
+&lt;br&gt;
+
+# Finalize workflow
+
+
+```r
+final_rf_workflow &lt;- rf_workflow %&gt;% 
+                     finalize_workflow(best_rf)
+```
+
+--
+
+# Variable Importance
+
+
+```r
+rf_wf_fit &lt;- final_rf_workflow %&gt;% 
+             fit(data = db_train)
+
+rf_fit &lt;- rf_wf_fit %&gt;% 
+          extract_fit_parsnip()
+```
+
+---
+
+# Variable Importance
+
+&lt;img src="Day27_files/figure-html/unnamed-chunk-31-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+class: action, middle
+
+# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Group&amp;nbsp;Activity&amp;nbsp;2&lt;/i&gt;    
+
+
+.pull-left-40[
+![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
+]
+.pull-right-60[
+&lt;br&gt;
+&lt;br&gt;
+.bq[
+- Please continue working on group activity 2
+]
+
+]
+
+<div class="countdown" id="timer_f5a50d63" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
