--- a/public/stat220/Day27.html
+++ b/public/stat220/Day27.html
@@ -48,7 +48,7 @@ class: title-slide, middle
 ### .fancy[Stat 220]
 
 
- March 03 2024
+ March 05 2024
 
 ---
 
@@ -56,9 +56,10 @@ class: middle
 
 ## Decision Tree
 
-.bql[
-- learns how to best split the dataset into smaller and smaller subsets to predict the target value
+.hljs.font80[
+A decision tree algorithm learns by repeatedly splitting the dataset into increasingly smaller subsets to accurately predict the target value.
 ]
+
 
 .pull-left[
 .bq.font80[
@@ -82,7 +83,7 @@ class: middle
 
 # Decision Tree
 
-.yellow-h[Use features to make subsets of cases that are as similar (“pure”) as possible with respect to the outcome]
+.yellow-h.font80[Use features to make subsets of cases that are as similar (“pure”) as possible with respect to the outcome]
 
 .bq.font80[
 - Start with all observations in one group
@@ -117,15 +118,15 @@ db &lt;- PimaIndiansDiabetes2 %&gt;% drop_na() %&gt;%
 glimpse(db)
 Rows: 392
 Columns: 9
-$ pregnant &lt;dbl&gt; 1, 0, 3, 2, 1, 5, 0, 1, 1, 3, 11, 10, 1, 13, 3, 3, 4, 4, 3, 9…
-$ glucose  &lt;dbl&gt; 89, 137, 78, 197, 189, 166, 118, 103, 115, 126, 143, 125, 97,…
-$ pressure &lt;dbl&gt; 66, 40, 50, 70, 60, 72, 84, 30, 70, 88, 94, 70, 66, 82, 76, 5…
-$ triceps  &lt;dbl&gt; 23, 35, 32, 45, 23, 19, 47, 38, 30, 41, 33, 26, 15, 19, 36, 1…
-$ insulin  &lt;dbl&gt; 94, 168, 88, 543, 846, 175, 230, 83, 96, 235, 146, 115, 140, …
-$ mass     &lt;dbl&gt; 28.1, 43.1, 31.0, 30.5, 30.1, 25.8, 45.8, 43.3, 34.6, 39.3, 3…
-$ pedigree &lt;dbl&gt; 0.167, 2.288, 0.248, 0.158, 0.398, 0.587, 0.551, 0.183, 0.529…
-$ age      &lt;dbl&gt; 21, 33, 26, 53, 59, 51, 31, 33, 32, 27, 51, 41, 22, 57, 28, 2…
-$ diabetes &lt;fct&gt; neg, pos, pos, pos, pos, pos, pos, neg, pos, neg, pos, pos, n…
+$ pregnant &lt;dbl&gt; 1, 0, 3, 2, 1, 5, 0, 1, 1, 3, 11, 10, 1, 13, 3, 3, 4, 4, 3, 9, 1, 1, 5, 8, 7, 7, 0, 0, 2, 1, 4, 2, 5, 4, 7, 2, 2, 1…
+$ glucose  &lt;dbl&gt; 89, 137, 78, 197, 189, 166, 118, 103, 115, 126, 143, 125, 97, 145, 158, 88, 103, 111, 180, 171, 103, 101, 88, 176, …
+$ pressure &lt;dbl&gt; 66, 40, 50, 70, 60, 72, 84, 30, 70, 88, 94, 70, 66, 82, 76, 58, 60, 72, 64, 110, 80, 50, 66, 90, 66, 68, 88, 64, 58…
+$ triceps  &lt;dbl&gt; 23, 35, 32, 45, 23, 19, 47, 38, 30, 41, 33, 26, 15, 19, 36, 11, 33, 47, 25, 24, 11, 15, 21, 34, 42, 39, 60, 41, 34,…
+$ insulin  &lt;dbl&gt; 94, 168, 88, 543, 846, 175, 230, 83, 96, 235, 146, 115, 140, 110, 245, 54, 192, 207, 70, 240, 82, 36, 23, 300, 342,…
+$ mass     &lt;dbl&gt; 28.1, 43.1, 31.0, 30.5, 30.1, 25.8, 45.8, 43.3, 34.6, 39.3, 36.6, 31.1, 23.2, 22.2, 31.6, 24.8, 24.0, 37.1, 34.0, 4…
+$ pedigree &lt;dbl&gt; 0.167, 2.288, 0.248, 0.158, 0.398, 0.587, 0.551, 0.183, 0.529, 0.704, 0.254, 0.205, 0.487, 0.245, 0.851, 0.267, 0.9…
+$ age      &lt;dbl&gt; 21, 33, 26, 53, 59, 51, 31, 33, 32, 27, 51, 41, 22, 57, 28, 22, 33, 56, 26, 54, 22, 26, 30, 58, 42, 41, 31, 22, 24,…
+$ diabetes &lt;fct&gt; neg, pos, pos, pos, pos, pos, pos, neg, pos, neg, pos, pos, neg, neg, pos, neg, neg, pos, neg, pos, neg, neg, neg, …
 ```
 
 ---
@@ -161,12 +162,13 @@ class: middle
 
 # Model Specification
 
-.bq[
+.bql.font80[
 - .out-t.bold[cost_complexity:] The cost complexity parameter, the minimum improvement in the model needed at each node
 - .out-t.bold[tree_depth:] The maximum depth of a tree
 - .out-t.bold[min_n:] The minimum number of data points in a node that are required for the node to be split further.
 ]
 
+.code120[
 
 ```r
 tree_model &lt;- decision_tree(cost_complexity = tune(),
@@ -175,6 +177,7 @@ tree_model &lt;- decision_tree(cost_complexity = tune(),
               set_engine('rpart') %&gt;% 
               set_mode('classification')
 ```
+]
 
 ---
 
@@ -221,9 +224,9 @@ tree_grid &lt;- grid_random(cost_complexity(),
 
 class: middle
 
-# View grid
+## View grid
 
-.font130[
+.code130[
 
 ```r
 tree_grid
@@ -265,16 +268,16 @@ tree_tuning &lt;- tree_workflow %&gt;%
 class: middle
 
 # Best model
-
+.code120[
 
 ```r
 # Select best model based on accuracy
 best_tree &lt;- tree_tuning %&gt;% 
              select_best(metric = 'accuracy')
 ```
+]
 
-
-
+.code120[
 
 ```r
 # View the best tree parameters
@@ -284,6 +287,7 @@ best_tree
             &lt;dbl&gt;      &lt;int&gt; &lt;int&gt; &lt;chr&gt;                
 1        5.28e-10          7    40 Preprocessor1_Model01
 ```
+]
 
 ---
 
@@ -291,31 +295,37 @@ best_tree
 
 # Finalize workflow
 
+.code110[
 
 ```r
 final_tree_workflow &lt;- tree_workflow %&gt;% 
                        finalize_workflow(best_tree)
 ```
+]
 
 --
 
 # Fit the model
 
+.code110[
 
 ```r
 tree_wf_fit &lt;- final_tree_workflow %&gt;% 
                fit(data = db_train)
 ```
+]
 
 --
 
 # Extract fit 
 
+.code120[
 
 ```r
 tree_fit &lt;- tree_wf_fit %&gt;% 
             extract_fit_parsnip()
 ```
+]
 
 ---
 
@@ -350,13 +360,15 @@ class: middle
 
 # Train and Evaluate With `last_fit()`
 
+.code110[
 
 ```r
 tree_last_fit &lt;- final_tree_workflow %&gt;% 
                  last_fit(db_split)
 ```
+]
 
-
+.code110[
 
 ```r
 tree_last_fit %&gt;% collect_metrics()
@@ -366,6 +378,7 @@ tree_last_fit %&gt;% collect_metrics()
 1 accuracy binary         0.765 Preprocessor1_Model1
 2 roc_auc  binary         0.824 Preprocessor1_Model1
 ```
+]
 
 ---
 
@@ -387,7 +400,7 @@ class: action, middle
 &lt;br&gt;
 &lt;br&gt;
 .bq[
-- Get the class activity 26.Rmd file from  [moodle](https://moodle.carleton.edu/course/view.php?id=43045) 
+- Get the class activity 27.Rmd file from  [moodle](https://moodle.carleton.edu/course/view.php?id=43045) 
 - Let's work on group activity 1 together
 ]
 
@@ -395,7 +408,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_a43e0797" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_d8df4b53" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -405,7 +418,7 @@ class: action, middle
 class: inverse, middle
 
 
-&gt; Now, let's talk about random forest
+.Large[Now, let's talk about random forest]
 
 
 ---
@@ -414,11 +427,10 @@ class: middle
 
 # Random Forest
 
-.out-t[Random forests take decision trees and construct more powerful models in terms of prediction accuracy.]
+.hljs[Random forests take decision trees and construct more powerful models in terms of prediction accuracy.]
 
 
-
-.font80.bq[
+.font90.bq[
 - &lt;!--The main mechanism that powers this algorithm is--&gt; Repeated sampling (with replacement) of the training data to produce a sequence of decision tree models. 
 
 - These models are then averaged to obtain a single prediction for a given value in the predictor space.
@@ -432,7 +444,7 @@ class: middle
 
 # Model Specification
 
-.bq[
+.bql.font80[
 - .out-t.bold[mtry:] The number of predictors that will be randomly sampled at each split when creating the tree models
 
 - .out-t.bold[trees:] The number of decision trees to fit and ultimately average
@@ -446,6 +458,7 @@ class: middle
 
 # Model Specification
 
+.code110[
 
 ```r
 rf_model &lt;- rand_forest(mtry = tune(),
@@ -454,17 +467,20 @@ rf_model &lt;- rand_forest(mtry = tune(),
             set_engine('ranger', importance = "impurity") %&gt;% 
             set_mode('classification')
 ```
+]
 
 --
 
 # Workflow
 
+.code120[
 
 ```r
 rf_workflow &lt;- workflow() %&gt;% 
                add_model(rf_model) %&gt;% 
                add_recipe(db_recipe)
 ```
+]
 
 ---
 
@@ -472,6 +488,7 @@ class: middle
 
 # Hyperparameter Tuning
 
+.code120[
 
 ```r
 ## Create a grid of hyperparameter values to test
@@ -479,35 +496,33 @@ set.seed(314)
 rf_grid &lt;- grid_random(mtry() %&gt;% range_set(c(2, 7)),
                        trees(),
                        min_n(),
-                       size = 15)
+                       size = 10)
 ```
+]
 
 ---
 
-# View Grid
+## View Grid
 
+.code130[
 
 ```r
 rf_grid
-# A tibble: 15 × 3
+# A tibble: 10 × 3
     mtry trees min_n
    &lt;int&gt; &lt;int&gt; &lt;int&gt;
- 1     7   609    32
- 2     5  1235     6
- 3     4  1822    29
- 4     5   678    16
- 5     4   138    14
- 6     3  1218    19
- 7     7   228    14
- 8     5   873     4
- 9     6  1387    10
-10     7  1717     5
-11     5   436     4
-12     3  1175    16
-13     6  1909    33
-14     6   118     4
-15     2  1003    24
+ 1     7   332    39
+ 2     5  1064    11
+ 3     4   218     3
+ 4     5  1304    37
+ 5     4   477    24
+ 6     3  1621    32
+ 7     7  1841     6
+ 8     5   609    29
+ 9     6  1235    16
+10     7  1822    14
 ```
+]
 
 ---
 
@@ -515,7 +530,7 @@ class: middle
 
 # Tuning Hyperparameters with `tune_grid()`
 
-
+.code120[
 
 ```r
 ## Tune random forest workflow
@@ -525,6 +540,7 @@ rf_tuning &lt;- rf_workflow %&gt;%
              tune_grid(resamples = db_folds,
                        grid = rf_grid)
 ```
+]
 
 ---
 
@@ -532,13 +548,17 @@ class: middle
 
 # Select best
 
+.code120[
 
 ```r
 ## Select best model based on roc_auc
 best_rf &lt;- rf_tuning %&gt;% 
            select_best(metric = 'accuracy')
 ```
+]
 
+
+.code120[
 
 ```r
 # View the best parameters
@@ -546,8 +566,9 @@ best_rf
 # A tibble: 1 × 4
    mtry trees min_n .config              
   &lt;int&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;                
-1     2  1003    24 Preprocessor1_Model15
+1     3  1621    32 Preprocessor1_Model06
 ```
+]
 
 ---
 
@@ -557,16 +578,19 @@ best_rf
 
 # Finalize workflow
 
+.code120[
 
 ```r
 final_rf_workflow &lt;- rf_workflow %&gt;% 
                      finalize_workflow(best_rf)
 ```
+]
 
 --
 
 # Variable Importance
 
+.code120[
 
 ```r
 rf_wf_fit &lt;- final_rf_workflow %&gt;% 
@@ -575,6 +599,7 @@ rf_wf_fit &lt;- final_rf_workflow %&gt;%
 rf_fit &lt;- rf_wf_fit %&gt;% 
           extract_fit_parsnip()
 ```
+]
 
 ---
 
@@ -597,12 +622,12 @@ class: action, middle
 &lt;br&gt;
 &lt;br&gt;
 .bq[
-- Please continue working on group activity 2
+- Let's continue working on group activity 2
 ]
 
 ]
 
-<div class="countdown" id="timer_f5a50d63" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_0da98e3c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
